--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,28 @@
   <meta charset="utf-8" />
   <meta name="description" content="">
 
-  <title>ratio demo</title>
+  <title>jQuery Ratio demo</title>
 
   <style>
     html,
     body {
+      font-family: helvetica, arial, sans-serif;
       margin: 0;
     }
 
+    div {
+      background-color: cyan;
+      border: 1px dotted black;
+      margin: 0 auto 20px auto;
+      text-align: center;
+    }
+
     div.one {
-      background-color: orange;
       height: 300px;
       width: 300px;
     }
+
     div.two {
-      background-color: red;
       width: 50%;
     }
   </style>
@@ -52,8 +59,8 @@
 </head>
 <body>
 
-  <div class="one"></div>
-  <div class="two"></div>
+  <div class="one">4:3 <br />(go back to original on click)</div>
+  <div class="two">21:9 <br />(recalculated on resize)</div>
 
 </body>
 </html>
